--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
 
   <div ng-view></div>
 
-  <div>Browser notes app: v<span app-version></span></div>
-
-
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
   <script src="js/app.js"></script>
@@ -34,4 +31,7 @@
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 </body>
+<footer>
+    <div>Browser notes app: v<span app-version></span></div>
+</footer>
 </html>
