--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
+  <div class="wrapper">
   <ul class="menu">
     <li><a href="#/list">List of notes</a></li>
     <li><a href="#/add">Add new note</a></li>
@@ -22,6 +23,7 @@
   <![endif]-->
 
   <div ng-view></div>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
